After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754963 - desktop-background: able to get the focus, placed above desktop icons
desktop-background: able to get the focus, placed above desktop icons
Status: RESOLVED FIXED
Product: gnome-flashback
Classification: Other
Component: desktop-background
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Flashback Maintainers
GNOME Flashback Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-13 15:27 UTC by Balló György
Modified: 2016-07-25 11:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
desktop-background: keep desktop background under all windows (10.76 KB, patch)
2016-04-05 13:07 UTC, Alberts Muktupāvels
none Details | Review

Description Balló György 2015-09-13 15:27:57 UTC
Steps to reproduce:
1. Hit Ctrl-Alt-Tab.
2. Choose gnome-flashback, which is the desktop background.
3. Now the desktop background get the focus, and placed above the desktop icons rendered by Nautilus.

Tested with the current gnome-flashback git master.

I think the desktop background should not be listed on the Ctrl-Alt-Tab switcher, and never should be placed above the desktop icons.
Comment 1 Alberts Muktupāvels 2015-09-18 17:55:18 UTC
Now it should be fixed...
Comment 2 Balló György 2015-11-02 01:47:28 UTC
Unfortunately, the desktop background is still placed above the desktop icons in the following case (I could always reproduce it with gnome-flashback 3.18.1):

1. Log in into a new GNOME Flashback (Metacity) session. Don't open any windows yet.

2. Alt+Right click on the panel, and select 'Properties'.

3. Close 'Panel properties' window.

As soon as the window disappeared, the desktop background image is placed above the desktop icons.
Comment 3 Balló György 2015-11-04 11:03:27 UTC
It usually happens when I close the last visible window.
Comment 4 Alberts Muktupāvels 2016-04-05 13:07:12 UTC
Created attachment 325426 [details] [review]
desktop-background: keep desktop background under all windows

Can you please test this with both session? Compiz & Metacity?
Comment 5 Balló György 2016-04-09 09:52:19 UTC
I tested with Metacity, but it still doesn't work. The desktop windows disappear as soon as I close the 'Panel properties' window. The only difference with the patch is that the desktop icons sometimes appear again, when I reopen the window, and disappear again, when I close it.
Comment 6 Alberts Muktupāvels 2016-04-25 20:23:39 UTC
Ok, thanks for testing. :)

We could create desktop background window only when we need it:
- when changing background image - for fade effect
- when screen size changes - to recreate and reset background on root window?
- when starting gnome-flashback - to set background on root window

and then just destroy it and/or hide until it is needed again. No window, no problems. :)

I guess it will work way better, but this will also cause problems in compiz session. I will try to fix that first and/if I will have working branch for compiz then I will push above changes.
Comment 8 Alberts Muktupāvels 2016-04-26 21:23:46 UTC
If you have time please test wip/desktop-background branch.

More or less this should be fixed because there will be no desktop window. It will be created only to set and/or change background.

I hope this time you will not be able to find problems with this.
Comment 9 Balló György 2016-04-27 14:18:07 UTC
Thank you very much! It works better, however I could still reproduce the problem sometimes during the fade effect, e.g. when I switch the background image. When the fade effect starts, the desktop icons disappear, and become visible again when the fade effect ends.

But of course, it's much better, and makes the desktop icons usable, so it's fine for me.
Comment 10 Alberts Muktupāvels 2016-04-27 14:19:54 UTC
When icons disappear? Simply changing background image?
Comment 11 Balló György 2016-04-27 14:22:05 UTC
Yes, simply changing the background image causes this sometimes, but not always.
Comment 12 Alberts Muktupāvels 2016-04-27 14:26:04 UTC
Can you try without last commit:
desktop-background: try to keep background window under all windows

But I guess it wont change anything... :(
Comment 13 Balló György 2016-04-27 15:47:17 UTC
Yes, I don't see any difference with or without the last commit.
Comment 14 Alberts Muktupāvels 2016-04-27 15:58:19 UTC
Ok, thanks for testing. :) I have pushed all changes to master except that last commit. Right now I have no other ideas how to force window to stay bellow all other windows. :(

One option could be to remove fade setting... Then desktop window would not be needed.
Comment 15 Balló György 2016-07-25 11:27:04 UTC
The desktop icons are still frequently disappear during the fade effect. I think the best would be to remove fade setting.