desktop-background: use GTK_WINDOW_POPUP as window type

Otherwise this window will appear in Ctrl-Alt-Tab dialog.

https://bugzilla.gnome.org/show_bug.cgi?id=754963